[package]
name = "redox-iou"
version = "0.0.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["executor", "io_uring", "redox", "futures", "async"]
categories = ["asynchronous", "os"]
description = "Redox's own liburing alternative"
documentation = "https://docs.rs/redox-iou"
repository = "https://gitlab.redox-os.org/redox-os/redox-iou"
readme = "README.md"
homepage = "https://redox-os.org/"

[dependencies]
async-task = "3"
bitflags = "1.2"
crossbeam-queue = "0.2"
either = "1.5"
futures-core = "0.3"
guard-trait = "0.4"
log = "0.4"
parking_lot = { version = "0.11", features = ["nightly"] }
redox_syscall = { git = "https://gitlab.redox-os.org/4lDO2/syscall.git", branch = "incompat-io_uring-fix", features = ["std"] }
redox-buffer-pool = { version = "0.5", features = ["redox"] }
stable_deref_trait = "1.2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
iou = "0.3"
uring-sys = "0.7.4"
uapi = "0.2"
ioprio = { version = "0.1", features = ["iou"] }

[dev-dependencies]
env_logger = "0.7"
futures = "0.3"

[patch.crates-io]
iou = { git = "https://github.com/ringbahn/iou", branch = "master" }
